more edits and comments

--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -274,7 +274,7 @@ The majority (92.7\%) of the $Q$-associated variants are strongly biased in that
 By contrast, most $Q$-associated variants reported in the GWAS catalogue had weak bias (See Figure \ref{Pub_30}), with three exceptions.
 One study reports associations with seven $Q$-associated variants that we find to be highly biased \citep{Mandage2017}. 
 That study considered copy number of Epstein-Barr virus (EBV) sequence in the 1kGP as a phenotype. 
-\todo{It is plausible that the EBV copy number phenotype is sensitive to mapping and in this study, may be confounded by the same technical artefacts that lead to biased SNP calling.}
+\todo{It is plausible that the EBV copy number phenotype is sensitive to mapping and confounded by the same technical artefacts that lead to biased SNP calling.} \sgcomment{Don't forget to explain that the authors dealt with this using another QC metric!}
 
 
 
