--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -334,7 +334,7 @@ That study considered copy number of Epstein-Barr virus (EBV) sequence in the 1k
 
 \section{Discussion}
 
-Recommendations : doing their approach as well as ours. We recommend removing the variants we ID and the ones they find. Regression with QC metrics (shoutout to them)
+\todo{Recommendations : doing their approach as well as ours. We recommend removing the variants we ID and the ones they find. Regression with QC metrics (shoutout to them)}
 
 The variants identified in this study are likely to be technical artifacts from legacy technologies.
 Different sequencing technologies will have different error profiles. 
